# hyperconf

./: LICENSE  README.md  pyproject.toml  test_config.yaml
.github/workflows/: python-package.yml
docs/: conf.py  define_config.rst  define_schema.rst  documentation.rst  quickstart.rst
docs/source/: index.rst
hyperconf/: __init__.py  builtins.yaml  config.py  dsl.py  errors.py  lang.py  mapping.py  templates.py  types.py  yaml.py
hyperconf/templates/: builtins.yaml  generic.yaml  keras.yaml  ml.yaml  objdetect.yaml
source/: index.rst
tests/: defs.yaml  game_config.yaml  ships.yaml  test_config.py  test_defs.yaml  test_dsl.py
