[tool.poetry]
name = "hyperconf"
version = "0.1.0"
description = "ML experiment configuration manager."
authors = ["Radu Chindrix <radu.chindris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
debugpy = "^1.6.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
