[tool.poetry]
name = "hyperconf"
version = "0.2.0"
description = "A Python configuration library and definition language."
authors = ["Radu Chindris <radu.chindris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
debugpy = "^1.6.4"
flake8 = "^6.0.0"
Sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
