[tool.poetry]
name = "hyperconf"
version = "0.2.1"
description = "YAML-based configuration library, featuring zero-code validation and parsing."
authors = ["Radu Chindris <radu.chindris@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
debugpy = "^1.6.4"
flake8 = "^6.0.0"
Sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
